# job-applicator

./: .gitignore  README.md  descriptions.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  resume.py  runner.ps1
services/resume/: .gitignore  handler.py  requirements.txt  serverless.yml
services/resume/src/: cyint_dynamodb.py  cyint_linkedin.py  cyint_openai.py  cyint_slack.py
src/: cyint_jira.py  cyint_linkedin.py  cyint_openai.py  cyint_resume.py  cyint_slack.py
tests/: test_cyint_dynamodb.py  test_cyint_jira.py  test_cyint_linkedin.py  test_cyint_slack.py  test_harvest_opportunities.py
